--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -66,7 +66,7 @@ collections:
           label: "Sport",
           name: "sport",
           widget: "select",
-          options: ["tb", "ll"]
+          options: ["tb", "ll", "il"]
         }
       - {
           label: "Division",
