update content folder

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -10,7 +10,7 @@ site_url: https://wbc-tb-fixtures.netlify.app
 collections:
   - name: "divisions"
     label: "Divisions"
-    folder: "_divisions/"
+    folder: "content/_divisions/"
     create: true
     identifier_field: division
     filter: { field: "sport", value: "tb" }
@@ -30,7 +30,7 @@ collections:
         }
   - name: "clubs"
     label: "Clubs"
-    folder: "_clubs/"
+    folder: "content/_clubs/"
     create: true
     identifier_field: club
     fields:
@@ -48,7 +48,7 @@ collections:
       - { label: "Venue", name: "venue", widget: "map" }
   - name: "teams"
     label: "Teams"
-    folder: "_teams/"
+    folder: "content/_teams/"
     create: true
     identifier_field: team
     filter: { field: "sport", value: "tb" }
@@ -85,7 +85,7 @@ collections:
       - { label: "Manager Name", name: "managerName", widget: "string" }
   - name: "rounds"
     label: "Rounds"
-    folder: "_rounds/"
+    folder: "content/_rounds/"
     create: true
     identifier_field: round
     fields:
@@ -103,7 +103,7 @@ collections:
         }
   - name: "games"
     label: "Games"
-    folder: "_games/"
+    folder: "content/_games/"
     create: true
     identifier_field: game
     fields:
