--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -109,8 +109,7 @@ collections:
     identifier_field: round
     fields:
       - { label: "Round", name: "round", widget: "string" }
-      - { label: "Date", name: "date", widget: "date" }
-      - { label: "Time", name: "time", widget: "time" }
+      - { label: "Date", name: "date", widget: "datetime" }
       - {
           label: "Division",
           name: "division",
