replace tb with Teeball

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,7 +12,7 @@ collections:
     folder: "content/_divisions/"
     create: true
     identifier_field: division
-    filter: { field: "sport", value: "tb" }
+    filter: { field: "sport", value: "Teeball" }
     fields:
       - { label: "Division", name: "division", widget: "string" }
       - {
@@ -38,7 +38,7 @@ collections:
           label: "Sport",
           name: "sport",
           widget: "select",
-          options: ["tb", "ll"]
+          options: ["Teeball", "Little League", "Intermediate League"]
         }
       - { label: "Logo", name: "logo", widget: "image" }
       - { label: "Primary Color", name: "color1", widget: "color" }
@@ -50,7 +50,7 @@ collections:
     folder: "content/_teams/"
     create: true
     identifier_field: team
-    filter: { field: "sport", value: "tb" }
+    filter: { field: "sport", value: "Teeball" }
     fields:
       - { label: "Team", name: "team", widget: "string" }
       - {
