--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -133,6 +133,7 @@ collections:
     folder: "content/_games/"
     create: true
     identifier_field: game
+    display_fields: ["round", "teamHome", "teamAway"]
     fields:
       - {
           label: "Round",
