--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -116,6 +116,7 @@ collections:
     folder: "content/_rounds/"
     create: true
     identifier_field: round
+    display_fields: ["round", "date"]
     fields:
       - { label: "Round", name: "round", widget: "string" }
       - { label: "Date", name: "date", widget: "datetime" }
