--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -53,11 +53,10 @@ collections:
   - name: "teams"
     label: "Teams"
     folder: "content/_teams/"
-    description: "{{club}}"
     create: true
     slug: "{{division}}-{{division_number}}{{club}}-{{slug}}"
     identifier_field: team
-    display_fields: ["division", "division_number", "club", "team"]
+    summary: "{{division}} [{{division_number}}] {{club}} {{team}}"
     filter: { field: "sport", value: "Teeball" }
     sortable_fields: ["division", "division_number"]
     view_groups:
@@ -121,7 +120,7 @@ collections:
     folder: "content/_rounds/"
     create: true
     identifier_field: round
-    summary: "{{division}} {{round}} {{day}}-{{month}}"
+    summary: "Div {{division}}, Rd {{round}}, {{day}}-{{month}}"
     fields:
       - { label: "Round", name: "round", widget: "string" }
       - { label: "Date", name: "date", widget: "datetime" }
