--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.15.1",
+    "netlify-cms-app": "^2.15.49",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
