--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.15.1",
     "netlify-cms-app": "^2.15.49",
+    "netlify-cms-widget-uuid": "0.0.9",
+    "netlify-identity-widget": "^1.9.2",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
