--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -20,7 +20,7 @@ collections:
           label: "Sport",
           name: "sport",
           widget: "select",
-          options: ["Teeball", "Little League", "Intermediate League"],
+          options: ["Teeball", "Machine Pitch", "Little League", "Intermediate League"],
           default: "Teeball"
         }
       - {
@@ -42,7 +42,7 @@ collections:
           label: "Sport",
           name: "sport",
           widget: "select",
-          options: ["Teeball", "Little League", "Intermediate League"],
+          options: ["Teeball", "Machine Pitch", "Little League", "Intermediate League"],
           default: "Teeball"
         }
       - { label: "Logo", name: "logo", widget: "image" }
@@ -79,7 +79,7 @@ collections:
           label: "Sport",
           name: "sport",
           widget: "select",
-          options: ["Teeball", "Little League", "Intermediate League"],
+          options: ["Teeball", "Machine Pitch", "Little League", "Intermediate League"],
           default: "Teeball"
         }
       - {
